--- a/data_augmentation/autoencoder.ipynb
+++ b/data_augmentation/autoencoder.ipynb
@@ -1617,24 +1617,6 @@
    "source": [
     "### Conclusion:\n",
     "\n",
-    "1. no drop gets the best autoencoder.\n",
-    "2. Augmenting on the entire dataset outperforms only augmenting minority label(seizure), indicating the importance of data amount on this particular problem.\n",
-    "3. Data augmentation brought an increase in all metrics.\n",
-    "Before augmentation:\n",
-    "- Recall for seizure activity: 40.00 %\n",
-    "- F1 score for detection: 67.93 %\n",
-    "- ROC and AUC for detection: 69.01 %\n",
-    "- Cohen Kappa for detection: 19.77 %\n",
-    "\n",
-    "After augmentation:\n",
-    "- Recall for seizure activity: 55.16 %\n",
-    "- F1 score for detection: 77.48 %\n",
-    "- ROC and AUC for detection: 80.35 %\n",
-    "- Cohen Kappa for detection: 44.80 %\n",
-    "\n",
-    "\n",
-    "### Conclusion:\n",
-    "\n",
     "1. **Dropout Analysis**:\n",
     "   - The autoencoder without dropout achieved the best performance, suggesting that regularization through dropout might not be as beneficial for this autoencoder.\n",
     "\n",
@@ -1644,7 +1626,6 @@
     "3. **Impact of Data Augmentation**:\n",
     "   - Data augmentation improved all evaluation metrics, demonstrating its effectiveness in enhancing model performance for seizure detection.\n",
     "\n",
-    "---\n",
     "\n",
     "### Metrics Before and After Augmentation:\n",
     "\n",
@@ -1653,9 +1634,7 @@
     "| **Recall (Seizure Activity)**   | 40.00%              | 55.16%            |\n",
     "| **F1 Score (Detection)**        | 67.93%              | 77.48%            |\n",
     "| **ROC-AUC (Detection)**         | 69.01%              | 80.35%            |\n",
-    "| **Cohen's Kappa (Detection)**   | 19.77%              | 44.80%            |\n",
-    "\n",
-    "---"
+    "| **Cohen's Kappa (Detection)**   | 19.77%              | 44.80%            |"
    ]
   }
  ],
