added updated code

--- a/Inception_CNN_EEG_hard_test.ipynb
+++ b/Inception_CNN_EEG_hard_test.ipynb
@@ -806,13 +806,6 @@
       "source": [
         "model.save('./models/eeg_cnn_model_augmentation.h5')"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
@@ -820,7 +813,8 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "accenture",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
