--- a/data_augmentation/train_vae_and_conditional_vae.ipynb
+++ b/data_augmentation/train_vae_and_conditional_vae.ipynb
@@ -56,7 +56,7 @@
     "from tensorflow.keras.models import Model\n",
     "from tensorflow.keras.optimizers import Adam \n",
     "from tensorflow.keras.callbacks import EarlyStopping\n",
-    "from tensorflow.keras.layers import Input, Conv1D, Conv2D, MaxPooling2D, BatchNormalization, Reshape, UpSampling2D, Conv2DTranspose, Conv1DTranspose, Dropout, Dense, Flatten\n",
+    "from tensorflow.keras.layers import Input, Conv1D, Conv2D, MaxPooling2D, BatchNormalization, Reshape, UpSampling2D, Conv2DTranspose, Conv1DTranspose, Dropout, Dense, Flatten, Lambda, concatenate, MaxPooling1D, Embedding\n",
     "\n",
     "# Check if GPU is available\n",
     "gpus = tf.config.list_physical_devices('GPU')\n",
@@ -96,31 +96,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Reshape the data for the model\n",
     "X_train = X_train.reshape(-1, 178, 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(10388, 178, 1)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_train.shape"
    ]
   },
   {
@@ -181,14 +162,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow as tf\n",
-    "from tensorflow.keras import layers, Model\n",
-    "from tensorflow.keras import backend as K\n",
-    "from tensorflow.keras.layers import (\n",
-    "    Input, Conv1D, Conv1DTranspose, Dense, Flatten, Reshape, Dropout,\n",
-    "    Lambda, concatenate, MaxPooling1D\n",
-    ")\n",
-    "import numpy as np\n",
     "\n",
     "def InceptionNucleus(input_layer, filters, one_d_dropout_rate=0):\n",
     "    branches = []\n",
@@ -400,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -412,8 +385,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "\n",
     "# Check if all signals are the same\n",
     "all_same = [np.array_equal(synthetic_eeg[0], signal) for signal in synthetic_eeg]\n",
@@ -533,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1501,15 +1472,6 @@
     }
    ],
    "source": [
-    "import tensorflow as tf\n",
-    "from tensorflow.keras import layers, Model\n",
-    "from tensorflow.keras import backend as K\n",
-    "from tensorflow.keras.layers import (\n",
-    "    Input, Conv1D, Conv1DTranspose, Dense, Flatten, Reshape, Dropout,\n",
-    "    Lambda, concatenate, MaxPooling1D, Embedding\n",
-    ")\n",
-    "import numpy as np\n",
-    "\n",
     "def InceptionNucleus(input_layer, filters, one_d_dropout_rate=0):\n",
     "    branches = []\n",
     "    for f in filters:\n",
