--- a/data_augmentation/train_vae_and_conditional_vae.ipynb
+++ b/data_augmentation/train_vae_and_conditional_vae.ipynb
@@ -57,6 +57,7 @@
     "from tensorflow.keras.optimizers import Adam \n",
     "from tensorflow.keras.callbacks import EarlyStopping\n",
     "from tensorflow.keras.layers import Input, Conv1D, Conv2D, MaxPooling2D, BatchNormalization, Reshape, UpSampling2D, Conv2DTranspose, Conv1DTranspose, Dropout, Dense, Flatten, Lambda, concatenate, MaxPooling1D, Embedding\n",
+    "from tensorflow.keras import backend as K\n",
     "\n",
     "# Check if GPU is available\n",
     "gpus = tf.config.list_physical_devices('GPU')\n",
