modify baseline, readme, and autoencoder

--- a/generate_challenging_test_cases.ipynb
+++ b/generate_challenging_test_cases.ipynb
@@ -7,7 +7,7 @@
     "# Generate hard test cases\n",
     "\n",
     "#### Motivation\n",
-    "Since we have achieved a high baseline accuracy on the seizure dataset, the potential for improvement on the overall dataset is limited. Therefore, we will create challenging test cases where seizure classification is more difficult to evaluate the model's robustness.\n",
+    "Since we have achieved a high baseline (97.8% F1 score) on the seizure dataset, the potential for improvement on the overall dataset is limited. Therefore, we will create challenging test cases where seizure classification is more difficult to evaluate the model's robustness.\n",
     "\n",
     "#### Methodologies\n",
     "Use SVM and ANN(Artificial Neural Network) to generate hard test cases\n",
@@ -741,9 +741,9 @@
     "                ]\n",
     "train_data, test_data = get_hard_test_cases(method_list)\n",
     "\n",
-    "os.makedirs(\"hard_test_cases\", exist_ok = True)\n",
-    "train_data.to_csv('hard_test_cases/train.csv')\n",
-    "test_data.to_csv('hard_test_cases/test.csv')"
+    "os.makedirs(\"data/hard_test_cases\", exist_ok = True)\n",
+    "train_data.to_csv('data/hard_test_cases/train.csv')\n",
+    "test_data.to_csv('datahard_test_cases/test.csv')"
    ]
   },
   {
