--- a/baseline_detection_model.ipynb
+++ b/baseline_detection_model.ipynb
@@ -9,7 +9,12 @@
     "We implemented baseline models such as Logistric regression, SVM, ANN, and Inception Nucleus. Their performance was evaluated using standard metrics.\n",
     "\n",
     "## Conclusion\n",
-    "The models already demonstrate strong performance in seizure detection, achieving an accuracy of over 97%. To further evaluate the models' robustness, we plan to generate challenging test cases where seizure detection is more difficult. This will help clearly identify the differences in performance before and after applying data augmentation."
+    "\n",
+    "1. SVC, ANN, and Naive Bayes achieved the best performance, with SVC attaining an F1 score of 97.8%, an ROC-AUC of 99.7%, and a Cohen's Kappa of 93%.\n",
+    "2. Using SMOTE to balance the dataset provided minimal improvement.\n",
+    "3. Ensemble modeling yielded little additional improvement.\n",
+    "\n",
+    "The models already demonstrate strong performance in seizure detection, achieving an F1 of over 97.8%. To further evaluate the models' robustness, we plan to generate challenging test cases where seizure detection is more difficult. This will help clearly identify the differences in performance before and after applying data augmentation."
    ]
   },
   {
@@ -1311,6 +1316,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Imbalanced dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 68,
    "metadata": {
@@ -1499,6 +1511,13 @@
     "\n",
     "df_metrics = pd.DataFrame(metrics_data)\n",
     "df_metrics.T.sort_values(by='ROC_AUC', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Balanced dataset"
    ]
   },
   {
@@ -1769,8 +1788,9 @@
    "source": [
     "### Conclusion:\n",
     "\n",
-    "1. SVC, ANN, Naive Bayes have the best performance, with 0.978062\t0.997047\t0.931401\n",
-    "2. The model has already achieved amazing performance, emsembling models can barely improve more."
+    "1. SVC, ANN, and Naive Bayes achieved the best performance, with SVC attaining an F1 score of 97.8%, an ROC-AUC of 99.7%, and a Cohen's Kappa of 93%.\n",
+    "2. Using SMOTE to balance the dataset provided minimal improvement.\n",
+    "3. Ensemble modeling yielded little additional improvement."
    ]
   }
  ],
